--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
         </div>
         <div class="prompt">--</div>
         <div class="prompt-bumper">--</div>
+        <div class="fitted-wrapper">
+            <div class="history answer">
+                <div class="title">HISTORY</div>
+                <div class="content"></div>
+            </div>
+        </div>
     </div>
 
     <script src="data.js"></script>
